feat: CRUD Teacher Schema
